  compiled in if, and only if, ALSA is found available (which has been
  a primordial assumption on Linux systems:). Ah, and that just makes
  for the blind inclusion of another backend driver option: coreaudio.

- Actual OSS device selection menu now featured on setup dialog; these
  adds to the device selection button menus for the OSS driver settings.

- Fixed some minor but rather old bug that was quitting the application
  abruptly, when one switches off the system tray icon while the main
  application widget is hidden.
  
0.2.15a  2005-02-09  Return of the paranoid.

- Regression from 0.2.13, of the not so stupid pseudo-mutex guards on the
  connections management framework, after fixing some crash reports from
  Fernando Pablo Lopez-Lezcano and Dave Phillips (thanks!); it pays to be
  such a paranoid after all :).


0.2.15   2005-02-06  Client/port names aliasing and other minors.

- JACK/ALSA client and port name aliasing (renaming) is now an optional 
  feature for the connections window; all client/port aliases are saved 
  on a per preset basis (as proposed for Lionstracs' Mediastation).

- Server state now shown (back gain) on the system tray icon tooltip; 
  speaking of which, tooltips are now also featured on connections, status
  and patchbay windows.

- New actual hardware device selection menu featured on setup dialog; these
  new button menus are only available for the ALSA driver settings.

- Server path factory default to jackd instead of jackstart; preset setup
  button icons are back.

- Fixed rare connection port item removal/disconnection dangling pointer bug.


0.2.14   2005-01-23  More progressive optimizations.

- Put a limit on XRUN callback messages and statistics report rate, preventing
  the potential hosing of the GUI due to a XRUN cascade storm. The maximum
  reasonable report rate has been fixed to be one XRUN callback occurrence 
  per second.

- Set to ignore the SIGPIPE ("Broken pipe") signal, where available, as the